--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension MooseX::Types::Data::Serializer.
 
 {{$NEXT}}
+ - Add copyright and license info.
 
 0.01      2012-04-08
  - First release.
