--- a/README.pod
+++ b/README.pod
@@ -70,3 +70,12 @@ This is a L<MooseX::Types> type that works just like the Data::Serializer type.
 
 Just like the Serializer type, but for Data::Serializer::Raw.
 
+=head1 AUTHOR
+
+Aran Clary Deltac <bluefeet@gmail.com>
+
+=head1 LICENSE
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
