--- a/Changes
+++ b/Changes
@@ -1,10 +1,15 @@
-Revision history for Perl extension MooseX::Types::Data::Serializer.
+Revision history for Perl extension MooseX-Types-Data-Serializer.
 
 {{$NEXT}}
 
-0.02      2012-04-08
+ - Migrate all the tests from Test::More to Test2::V0.
+ - Migrate build tooling from Dist::Zilla to Minilla.
+
+0.02 2012-04-08
+
  - Add copyright and license info.
 
-0.01      2012-04-08
+0.01 2012-04-08
+
  - First release.
 
