--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension MooseX-Types-Data-Serializer.
 
 {{$NEXT}}
 
+ - Require perl 5.8 per Manilla.
+ - Simplify VERSION declarations.
+
 0.03 2019-02-18T06:08:46Z
 
  - Migrate all the tests from Test::More to Test2::V0.
