--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension MooseX-Types-Data-Serializer.
 
 {{$NEXT}}
 
- - Require perl 5.8 per Manilla.
+ - Require perl 5.8 per Minilla.
  - Simplify VERSION declarations.
 
 0.03 2019-02-18T06:08:46Z
