--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension MooseX-Types-Data-Serializer.
 
 {{$NEXT}}
 
+ - Declare x_authority.
+
 0.04 2023-06-06T15:55:30Z
 
  - Require perl 5.8.1.
